wal-rsx/tests/elements/element_without_closing_fail.stderr
error: This opening tag does not have a corresponding closing tag. (hint: try adding `</div>`)
 --> tests/elements/element_without_closing_fail.rs:4:12
  |
4 |     rsx! { <div> };
  |            ^^^^^

error: This opening tag does not have a corresponding closing tag. (hint: try adding `</div>`)
 --> tests/elements/element_without_closing_fail.rs:5:12
  |
5 |     rsx! { <div> "Hello world!" };
  |            ^^^^^

error: This opening tag does not have a corresponding closing tag. (hint: try adding `</div>`)
 --> tests/elements/element_without_closing_fail.rs:6:12
  |
6 |     rsx! { <div> { String::from("Hello world") } };
  |            ^^^^^

error: This opening tag does not have a corresponding closing tag. (hint: try adding `</div>`)
 --> tests/elements/element_without_closing_fail.rs:7:12
  |
7 |     rsx! { <div><div></div> };
  |            ^^^^^
